# py-api-testing

./: .gitignore  README.md  _setup.cfg  pyproject.toml
.github/workflows/: tests.yml
src/api/: base_client.py
src/api/users/: user_api.py  users_data_preparation.py
src/config/: config.py
src/py_api_testing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_create_user.py
